Actualizar enlaces de cambios en el archivo de configuración de lanzamiento

--- a/.github/release-drafter-main.yml
+++ b/.github/release-drafter-main.yml
@@ -70,4 +70,4 @@ template: |
 
   $CHANGES
 
-  For more details see the [full list of changes](https://github.com/$OWNER/$REPOSITORY/compare/$PREVIOUS_TAG...$RESOLVED_VERSION/)
+  For more details see the [full list of changes](https://github.com/$OWNER/$REPOSITORY/compare/$PREVIOUS_TAG...v$RESOLVED_VERSION/)
