Update release-drafter-release.yml to include bug fix labels

--- a/.github/release-drafter-release.yml
+++ b/.github/release-drafter-release.yml
@@ -4,7 +4,9 @@ filter-by-commitish: true
 categories:
   - title: '🐛 Bug Fixes'
     labels:
-      - '*'
+      - 'fix'
+      - 'bugfix'
+      - 'bug'
 change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
 exclude-labels:
